# msq-demo

./: Cargo.toml  dfx.json
backend/src/can_demo_backend/: Cargo.toml  can.did
backend/src/can_demo_backend/src/: env.rs  lib.rs
frontend/: index.html  package.json  pnpm-lock.yaml  tsconfig.json
frontend/src/: backend.ts  node.d.ts
frontend/src/components/order/: index.tsx
frontend/src/components/plushie-card/: index.tsx
frontend/src/pages/index/: index.tsx
scripts/: before-build.sh  deploy.backend.sh  deploy.frontend.sh  extract-did.sh  generate-bind.sh
