[package]
name = "demo_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
codegen-units = 1
strip = true
lto = true
opt-level = 'z'
panic = 'abort'

[lib]
crate-type = ["cdylib"]

[dependencies]
ic-ledger-types = "0.13"
candid = "0.10.8"
serde = "1.0"
ic-cdk = "0.13"

[build-dependencies]
dotenv = "0.15"
